# godot

./: .gitignore  CMakeLists.txt  Makefile  generators.py  pyproject.toml
cmake/modules/: BuildType.cmake  CheckCompilerFlag.cmake  CheckComponent.cmake  CheckHeaders.cmake  CheckSourceCompiles.cmake  CheckSourceRuns.cmake  CheckSymbolExists.cmake  CheckTypeExists.cmake  DependentOption.cmake  Fetch.cmake  Hide.cmake  ImportLibrary.cmake  ImportProgram.cmake  PushFindState.cmake  SourceDepends.cmake  TargetSupport.cmake
cmake/toolchains/: wasm32-unknown-emscripten.cmake
core/: core_builders.py  make_binders.py
editor/: SCsub  editor_builders.py
modules/gdnative/: SCsub
modules/webm/libvpx/: SCsub
modules/websocket/: SCsub
scripts/: authors-generator.py  builder.py  builders.tmpl  donors-generator.py  editor-docs-generator.py  editor-font-generator.py  gdnative-generator.py  license-generator.py  template.hpp.in  version-generator.py  version-hash-generator.py
scripts/templates/: gdnative-api-struct.cpp.in  gdnative-api-struct.h.in  gdnative-wrapper-code.cpp.in  gdnative.jinja
scripts/templates/core/: authors.h.in  donors.h.in  version_generated.h.in  version_hash.h.in
scripts/templates/editor/: builtin_fonts.h.in  doc_data_compressed.h.in
